force-app/main/default/objects/Patient_Device__c/Patient_Device__c.object-meta.xml
<CustomObject>
    <description>This object is used to record devices readings and information when there is some integration with the 3rd party.</description>
    <label>Patient Device</label>
    <nameField>
        <label>Device Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>