force-app/main/default/objects/Patient_Device__c/fields/Device_Description__c.field-meta.xml
<CustomField>
    <fullName>Device_Description__c</fullName>
    <label>Device Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>