force-app/main/default/objects/Patient_Device__c/fields/Unique_Device_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Device_Identifier__c</fullName>
    <label>Unique Device Identifier</label>
    <type>TextArea</type>
</CustomField>